--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Услуги</title>
+    <title>Каталог</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
 	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
@@ -84,84 +84,40 @@
                     </nav>
             </section>
     </header>
-    <main class="service-bacground-leawes">
+    <main class="main-bacground-leawes">
         <div class="container">
             <div class="catalog-position-links">
-                <a href="index.html" class="link-to-main">Главная</a>|<a href="#" class="link-to-service">Услуги</a>
+                <a href="index.html" class="link-to-main">Главная</a>|<a href="catalog.html" class="link-to-catalog">Каталог</a>
             </div>
-            <section class="service">
-               <h2 class="main-caption">Услуги</h2>
-               <ul class="service-list list-reset">
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card1">
+            <section class="catalog">
+               <h2 class="main-caption">Каталог</h2>
+               <ul class="catalog-list list-reset">
+                   <li class="catalog-list-item">
+                    <div class="img-position-catalog catalog-image1">
                     </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a class="link-service-card" href="#">Оформление шарами</a>
-                    </h3>
+                    <div class="position-catalog-caption-hover">
+                    <h3 class="catalog-list-item-caption"><a href="#">Розы</a></h3>
                     </div>
                    </li>
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card2">
+                   <li class="catalog-list-item">
+                    <div class="img-position-catalog  catalog-image2">
                     </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a class="link-service-card" href="#">Оформление цветами</a>
-                    </h3>
+                    <div class="position-catalog-caption-hover">
+                    <h3 class="catalog-list-item-caption"><a href="#">Букеты</a></h3>
                     </div>
                    </li>
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card3">
+                   <li class="catalog-list-item">
+                    <div class="img-position-catalog  catalog-image3">
                     </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a class="link-service-card" href="#">Озеленение</a>
-                    </h3>
+                    <div class="position-catalog-caption-hover">
+                    <h3 class="catalog-list-item-caption"><a href="#">Коробки</a></h3>
                     </div>
                    </li>
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card4">
+                   <li class="catalog-list-item">
+                    <div class="img-position-catalog  catalog-image4">
                     </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a class="link-service-card" href="#">Интерьерные композиции</a>
-                    </h3>
-                    </div>
-                   </li>
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card5">
-                    </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a href="#">Школа флористики</a>
-                    </h3>
-                    </div>
-                   </li>
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card6">
-                    </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a href="#">Мастер классы</a>
-                    </h3>
-                    </div>
-                   </li>
-                   <li class="service-list-item">
-                    <div class="img-position-service service-card7">
-                    </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a href="#">Корпоративное сотрудничество</a>
-                    </h3>
-                    </div>
-                   </li>
-                   <li class="service-list-item service-card8">
-                    <div class="img-position-service">
-                    </div>
-                    <div class="position-service-caption-hover">
-                    <h3 class="service-list-item-caption">
-                        <a href="#">Аренда декораций</a>
-                    </h3>
+                    <div class="position-catalog-caption-hover">
+                    <h3 class="catalog-list-item-caption"><a href="#">Подарки</a></h3>
                     </div>
                    </li>
                </ul>
