--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оплата и доставка</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
     <header>
@@ -15,7 +20,7 @@
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
                 <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
                 <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="#">О компании</a></li>
+                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
                 <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
@@ -170,7 +175,7 @@
                     <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                    <li class="footer-menu-list-item"><a href="#">О компании</a></li>
+                    <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
                     <li class="footer-menu-list-item"><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
