--- a/categori.html
+++ b/categori.html
@@ -6,10 +6,15 @@
     <title>Фильтр товаров</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="/resources/demos/style.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <script src="js/filter.js"></script>
 </head>
 <body>
@@ -20,7 +25,7 @@
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
                 <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
                 <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="#">О компании</a></li>
+                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
                 <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
@@ -87,7 +92,7 @@
     <main>
         <div class="container">
             <div class="categori-position-links">
-                <a href="index.html" class="link-to-main">Главная</a>|<a href="#" class="link-to-catalog">Каталог</a>|<a href="#" class="link-to-categori">Категория 1</a>
+                <a href="index.html" class="link-to-main">Главная</a>|<a href="catalog.html" class="link-to-catalog">Каталог</a>|<a href="categori.html" class="link-to-categori">Категория 1</a>
             </div>
             <section class="categori">
                <h2 class="main-caption">Категория товара</h2>
@@ -171,16 +176,16 @@
                </div>
                <div class="products-categori">
                 <ul class="card-list list-reset">
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-1">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -188,16 +193,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-2">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -205,16 +210,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-3">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -222,16 +227,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-4">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -239,16 +244,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-5">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -256,16 +261,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-6">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -273,16 +278,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-7">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -290,16 +295,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-8">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -307,16 +312,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-9">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -324,16 +329,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-10">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -341,16 +346,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-11">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -358,16 +363,16 @@
                             <button type="button" class="fast-buy-btn">Быстрый заказ</button>
                         </div>
                     </li>
-                    <li class="card-list-item">
+                    <li class="card-list-item categori-card-12">
                         <div class="flag">
                             <p class="flag-hit">HIT</p>
                             <p class="flag-new">NEW</p>
                         </div>
                         <article>
-                            <h3>Название товара в две строки</h3>
-                            <p>Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
-                            <s>2800</s>
-                            <span>2800</span>
+                            <h3 class="card-caption">Название товара в две строки</h3>
+                            <p class="card-text">Рортензия,роза пионовидная кустовая, пион, озатамнус ...</p>
+                            <s class="card-price-decider">2 800 ₽</s>
+                            <span class="card-price-relevant">2 800 ₽</span>
                         </article>
                         <div class="card-list-hover">
                             <button type="button" class="faworite-button"></button>
@@ -391,7 +396,7 @@
                     <li class="footer-menu-list-item"><a href="#">Подарки</a></li>
                     <li class="footer-menu-list-item"><a href="services.html" class="last-item-footer-left">Услуги</a></li>
                     <li class="footer-menu-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                    <li class="footer-menu-list-item"><a href="#">О компании</a></li>
+                    <li class="footer-menu-list-item"><a href="abbout-us.html">О компании</a></li>
                     <li class="footer-menu-list-item"><a href="contacts.html">Контакты</a></li>
                 </ul>
             </div>
