--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Услуги</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="preload" href="fonts/Lovelace-Text-Light-trial.woff2" as="font">
+	<link rel="preload" href="fonts/Lovelace-Text-Medium-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
+    <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
     <header>
@@ -15,7 +20,7 @@
                 <li class="top-header-list-item"><a href="#" class="lower-border-header">Авторизация</a></li>
                 <li class="position-right"><a href="#" class="lower-border-header">Воронеж ул. Пушкинская д. 45</a></li>
                 <li class="top-header-list-item"><a href="payment.html">Оплата и доставка</a></li>
-                <li class="top-header-list-item"><a href="#">О компании</a></li>
+                <li class="top-header-list-item"><a href="abbout-us.html">О компании</a></li>
                 <li class="top-header-list-item"><a href="contacts.html">Контакты</a></li>
             </ul>
         </div>
@@ -81,7 +86,7 @@
     </header>
     <main class="contacts-bacground-leawes">
             <div class="catalog-position-links container">
-                <a href="index.html" class="link-to-main">Главная</a>|<a href="#" class="link-to-service">Контакты</a>
+                <a href="index.html" class="link-to-main">Главная</a>|<a href="contacts.html" class="link-to-service">Контакты</a>
             </div>
             <section class="contact container">
                 <h2 class="contact-caption main-caption-section">Контакты</h2>
