--- a/abbout-us.html
+++ b/abbout-us.html
@@ -14,6 +14,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
     <header>
@@ -28,7 +29,7 @@
             </ul>
         </div>
         </section>
-            <section>
+            <section class="header-info">
                 <div class="container info-header">
                 <img src="img/logo.png" alt="logo" class="logo">
                 <ul class="header-list list-reset">
@@ -87,7 +88,7 @@
                     </nav>
             </section>
     </header>
-    <main class="compani-bacground-leawes">
+    <main class="compani-bacground-leawes ">
             <section class="abbout">
                 <div class="container">
                     <div class="abbout-us-link catalog-position-links">
@@ -97,7 +98,7 @@
                         <div class="position-abbout-img">
                             <img src="img/abbout-us-image.jpg" alt="persona and flowers" class="abbout-img">
                         </div>
-                        <div>
+                        <div class="padding-main-top">
                             <h2 class="main-caption-section abbout-us-caption">О компании</h2>
                             <p class="abbout-text">Обратите внимание, что букеты на фото — это примеры наших работ.
                                 Мы не работаем по шаблону, одинаковых букетов не бывает. Каждый цветок уникален, так как это живой организм и найти два идентичных практически невозможно. Поэтому собранный букет может иметь отличия от фотографии на сайте.</p>
@@ -125,7 +126,7 @@
                                     <p class="text-revies-slide">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы.</p>
                                     <p class="text-revies-slide">При создании генератора мы использовали небезизвестный универсальный код речей.</p>
                                 </div>
-                                <div class="reviews-slide reviews-slide-reviews2">
+                                <div class="reviews-slide slide-320 reviews-slide-reviews2">
                                     <h3 class="caption-slider-abbout">Василий Тюльпанов</h3>
                                     <p class="text-revies-slide">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы.</p>
                                     <p class="text-revies-slide">При создании генератора мы использовали небезизвестный универсальный код речей.</p>
@@ -137,7 +138,7 @@
                                     <p class="text-revies-slide">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы.</p>
                                     <p class="text-revies-slide">При создании генератора мы использовали небезизвестный универсальный код речей. </p>
                                 </div>
-                                <div class="reviews-slide reviews-slide-reviews4">
+                                <div class="reviews-slide slide-320 reviews-slide-reviews4">
                                     <h3 class="caption-slider-abbout">Лилия Цветкова</h3>
                                     <p class="text-revies-slide">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы.</p>
                                     <p class="text-revies-slide">При создании генератора мы использовали небезизвестный универсальный код речей.</p>
@@ -149,7 +150,7 @@
                                     <p class="text-revies-slide">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы.</p>
                                     <p class="text-revies-slide">При создании генератора мы использовали небезизвестный универсальный код речей. </p>
                                 </div>
-                                <div class="reviews-slide reviews-slide-reviews6">
+                                <div class="reviews-slide slide-320 reviews-slide-reviews6">
                                     <h3 class="caption-slider-abbout">Лилия Цветкова</h3>
                                     <p class="text-revies-slide">H7 Headline Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы.</p>
                                     <p class="text-revies-slide">При создании генератора мы использовали небезизвестный универсальный код речей.</p>
