--- a/card.html
+++ b/card.html
@@ -12,6 +12,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -29,7 +30,7 @@
             </ul>
         </div>
         </section>
-            <section>
+            <section class="header-info">
                 <div class="container info-header">
                 <img src="img/logo.png" alt="logo" class="logo">
                 <ul class="header-list list-reset">
@@ -153,8 +154,8 @@
                                 </ul>
                         </div>
                         <div class="position-button-card">
-                            <button class="add-to-cart-card">Купить</button>
-                            <button class="buy-fast-card">Купить в один клик</button>
+                            <button class="btn-cart-product add-to-cart-card">Купить</button>
+                            <button class="btn-cart-product buy-fast-card">Купить в один клик</button>
                         </div>
                     </div>
             </section>
