--- a/services.html
+++ b/services.html
@@ -10,6 +10,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
@@ -25,17 +26,17 @@
             </ul>
         </div>
         </section>
-            <section>
-                <div class="container info-header">
-                <img src="img/logo.png" alt="logo" class="logo">
-                <ul class="header-list list-reset">
-                    <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                    <li class="top-header-list-item favorite-header"></li>
-                    <li class="top-header-list-item add-to-cart-header"></li>
-                </ul>
-                </div>
-            </section>
+        <section class="header-info">
+            <div class="container info-header">
+            <img src="img/logo.png" alt="logo" class="logo">
+            <ul class="header-list list-reset">
+                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                <li class="top-header-list-item favorite-header"></li>
+                <li class="top-header-list-item add-to-cart-header"></li>
+            </ul>
+            </div>
+        </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
@@ -155,10 +156,10 @@
                     </h3>
                     </div>
                    </li>
-                   <li class="service-list-item service-card8">
+                   <li class="service-list-item service-card8 img-position-service-320">
                     <div class="img-position-service">
                     </div>
-                    <div class="position-service-caption-hover">
+                    <div class="position-service-caption-hover position-service-caption-hover-320">
                     <h3 class="service-list-item-caption">
                         <a href="#">Аренда декораций</a>
                     </h3>
