--- a/wedding-decoration.html
+++ b/wedding-decoration.html
@@ -14,6 +14,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
@@ -29,17 +30,17 @@
             </ul>
         </div>
         </section>
-            <section>
-                <div class="container info-header">
-                <img src="img/logo.png" alt="logo" class="logo">
-                <ul class="header-list list-reset">
-                    <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                    <li class="top-header-list-item favorite-header"></li>
-                    <li class="top-header-list-item add-to-cart-header"></li>
-                </ul>
-                </div>
-            </section>
+        <section class="header-info">
+            <div class="container info-header">
+            <img src="img/logo.png" alt="logo" class="logo">
+            <ul class="header-list list-reset">
+                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                <li class="top-header-list-item favorite-header"></li>
+                <li class="top-header-list-item add-to-cart-header"></li>
+            </ul>
+            </div>
+        </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
