--- a/catalog.html
+++ b/catalog.html
@@ -10,6 +10,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
@@ -25,17 +26,17 @@
             </ul>
         </div>
         </section>
-            <section>
-                <div class="container info-header">
-                <img src="img/logo.png" alt="logo" class="logo">
-                <ul class="header-list list-reset">
-                    <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                    <li class="top-header-list-item favorite-header"></li>
-                    <li class="top-header-list-item add-to-cart-header"></li>
-                </ul>
-                </div>
-            </section>
+        <section class="header-info">
+            <div class="container info-header">
+            <img src="img/logo.png" alt="logo" class="logo">
+            <ul class="header-list list-reset">
+                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                <li class="top-header-list-item favorite-header"></li>
+                <li class="top-header-list-item add-to-cart-header"></li>
+            </ul>
+            </div>
+        </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
@@ -84,7 +85,7 @@
                     </nav>
             </section>
     </header>
-    <main class="main-bacground-leawes">
+    <main class="main-bacground-leawes padding-main-top">
         <div class="container">
             <div class="catalog-position-links">
                 <a href="index.html" class="link-to-main">Главная</a>|<a href="catalog.html" class="link-to-catalog">Каталог</a>
