--- a/contacts.html
+++ b/contacts.html
@@ -10,6 +10,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
@@ -25,7 +26,7 @@
             </ul>
         </div>
         </section>
-            <section>
+            <section class="header-info">
                 <div class="container info-header">
                 <img src="img/logo.png" alt="logo" class="logo">
                 <ul class="header-list list-reset">
