--- a/payment.html
+++ b/payment.html
@@ -10,6 +10,7 @@
     <link rel="preload" href="fonts/Lovelace-Text-Extrabold-trial.woff2" as="font">
     <link rel="preload" href="fonts/Lovelace-Text-Bold-trial.woff2" as="font">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
@@ -25,17 +26,17 @@
             </ul>
         </div>
         </section>
-            <section>
-                <div class="container info-header">
-                <img src="img/logo.png" alt="logo" class="logo">
-                <ul class="header-list list-reset">
-                    <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
-                    <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
-                    <li class="top-header-list-item favorite-header"></li>
-                    <li class="top-header-list-item add-to-cart-header"></li>
-                </ul>
-                </div>
-            </section>
+        <section class="header-info">
+            <div class="container info-header">
+            <img src="img/logo.png" alt="logo" class="logo">
+            <ul class="header-list list-reset">
+                <li class="top-header-list-item"><a href="tel:+79036510005" class="link-header-phone">+7 903-651-00-05</a></li>
+                <li class="top-header-list-item time-job-header">Работаем ежедневно с 08.00 до 21.00</li>
+                <li class="top-header-list-item favorite-header"></li>
+                <li class="top-header-list-item add-to-cart-header"></li>
+            </ul>
+            </div>
+        </section>
             <section class="menu-header">
                 <nav class="container">
                     <ul class="menu list-reset">
@@ -94,7 +95,7 @@
                         <div class="position-payment-img">
                             <img src="img/payment.jpg" alt="flower">
                         </div>
-                        <div>
+                        <div class="position-pay padding-main-top">
                             <h2 class="main-caption-section pay">Оплата</h2>
                             <ul class="payment-list list-custom">
                                 <li class="payment-liat-item">
@@ -113,6 +114,9 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="position-payment-img-320">
+                        <img src="img/payment.jpg" class="image-pay-320" alt="flower">
+                    </div>
                 </div>
             </section>
             <section class="delivery delivery-back">
@@ -122,7 +126,7 @@
                             <h2 class="main-caption-section deliveri-caption">Доставка</h2>
                             <p class="delivery-text-settings">Доставка цветов осуществляется без выходных. Заказать цветы Вы можете, связавшись с нами по телефону<br> +7 (903) 651 00 05 или написав нам через форму обратной связи в разделе «Контакты»</p>
                             <p class="delivery-text-settings">Доставка осуществляется круглосуточно при оформлении заказа до 21.00. Стоимость доставки с 21.00 до 8.00 - 500 рублей. Стоимость доставки по городу 300 рублей. Стоимость доставки по Воронежской области и другие регионы уточняйте у менеджера.</p>
-                            <div class="position-delivery">
+                            <div class="position-delivery-price">
                                 <ul class="delivery-list list-custom">
                                     <li class="delivery-list-item">
                                         <span class="delivery-price">400 рублей</span>
